1. vibesCardNames.json - updated syntax to include our own validation since melee doesn't do it. lowercase everything, remove ALL spaces, remove all punctuation ("What a Twist!" --> "whatatwist") 2. cards.js - normalizeName and createCleanedCardMap now take in a game type. if gametype is vibes, perform validation 3. updated art assets - vibes card back (new image with proper resolution), vibes frame (now loads in css page) 4. added bebas neue pro fonts 5. master control - changed decklist text areas to bebas neue pro so we could see lower case letters for debugging 6. scoreboard.css/.html - updated option for vibes. added background image url (vibes-frame), added properties to align #scoreboard-vibes correctly, embedded timer and added css to position timer correctly 7. matches.js - added bebas neue pro as option in font drop down but i dont know if it does anything

--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -195,3 +195,18 @@
   font-weight: normal;
   font-style: normal;
 }
+
+/* Bebas Neue Pro */
+@font-face {
+  font-family: "Bebas Neue Pro";
+  src: url("/fonts/BebasNeuePro-Regular.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Bebas Neue Pro";
+  src: url("/fonts/BebasNeuePro-Bold.otf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+}
