--- a/public/css/scoreboard.css
+++ b/public/css/scoreboard.css
@@ -979,10 +979,31 @@ body {
 /* Vibes Scoreboard Styles */
 #scoreboard-vibes {
     font-family: "Bebas Neue", sans-serif;
+
+    width: 1920px;
+    height: 1080px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
 #scoreboard-vibes * {
     font-family: "Bebas Neue", sans-serif;
+}
+
+#scoreboard-vibes .vibes-frame {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/images/vibes/scoreboard/frame/vibes-frame.png");
+    background-size: 1920px 1080px;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: 5;
+    pointer-events: none;
 }
 
 #scoreboard-vibes .header .background {
@@ -1004,13 +1025,15 @@ body {
     background: url("/assets/images/overlay_body.png");
 }
 
+/*
 #scoreboard-vibes .footer .background {
     width: 1920px;
     height: 50px;
     background: url("/assets/images/overlay_footer.png");
     transition: background-image 0.5s ease-in-out;
-    /* Smooth transition for background image */
+    Smooth transition for background image
 }
+*/
 
 #scoreboard-vibes .scorebug {
     width: 100%;
@@ -1217,14 +1240,33 @@ body {
     /* Smooth transition for background image */
 }
 
+/* Vibes Timer */
+#scoreboard-vibes .vibes-timer-wrapper {
+    position: absolute;
+    z-index: 20;
+    top: 880px;
+    left: 84px;
+    width: 320px;
+    height: 57px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 #scoreboard-vibes .timer-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100px;
-    width: 60px;
-    font-size: 25px;
+}
+
+#scoreboard-vibes .vibes-timer {
+    color: #ffffff;
+    /*font-family: 'Akzidenz-Grotesk Next XBold', sans-serif;*/
+    font-weight: 800;
+    font-size: 92px;
+    text-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
 }
 
 #scoreboard-vibes .mana-symbols {
@@ -1246,3 +1288,4 @@ body {
 #scoreboard-vibes #player-archetype-right {
     margin-left: 5px;
 }
+
